--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="action_refresh">refresh</string>
-    <string name="action_map">map</string>
-    <string name="title_activity_subgeddit">subgeddit</string>
-    <string name="title_activity_activity_map">activity_map</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_map">Map</string>
+    <string name="action_list">List</string>
+    <string name="title_activity_subgeddit">Subgeddit list</string>
+    <string name="title_activity_activity_map">Subgeddit map</string>
 </resources>
