--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_map">Map</string>
+    <string name="action_add">Add</string>
     <string name="action_list">List</string>
-    <string name="title_activity_subgeddit">Subgeddit list</string>
+
+    <string name="title_activity_main">Geddit</string>
+    <string name="title_activity_threads">Threads</string>
+    <string name="title_activity_comments">Comments</string>
     <string name="title_activity_activity_map">Subgeddit map</string>
+    <string name="title_activity_add">Add</string>
+
 </resources>
