--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,12 @@
     <string name="title_activity_comments">Comments</string>
     <string name="title_activity_activity_map">Subgeddit map</string>
     <string name="title_activity_add">Add</string>
+    <string name="location">Location</string>
+    <string name="thread">Thread</string>
+    <string name="comment">Comment</string>
+    <string name="add">Add!</string>
+    <string name="score">Score</string>
+    <string name="plusSign">+</string>
+    <string name="minusSign">-</string>
 
 </resources>
